entity/platform-tooling/local/echoserver/echoserver.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  ingressClassName: cilium
  rules:
  - host: echoserver.local.klessen.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 80
  tls:
    - hosts:
      - echoserver.local.klessen.cloud
      secretName: echoserver-tls
